# wasmtoolchain_macos_arm64

./: .bazelrc  BUILD.bazel  MODULE.bazel  README.md  toolchain.bzl  update-sysroot.sh  update-tools.sh  update.sh  wasm_rules.bzl
c/: BUILD.bazel  wasm.h
c++/: BUILD.bazel  chrono.cpp  condition_variable.cpp  ios.cpp  iostream.cpp  new_handler.cpp  string.cpp  thread.cpp
c/cmath/: BUILD.bazel
c/cmath/generic/: acosf.cpp  acoshf.cpp  asinf.cpp  asinhf.cpp  atanf.cpp  atanhf.cpp  ceil.cpp  ceilf.cpp  ceill.cpp  common_constants.cpp  common_constants.h  copysign.cpp  copysignf.cpp  copysignl.cpp  cosf.cpp  coshf.cpp  erff.cpp  exp10f.cpp  exp2f.cpp  expf.cpp  explogxf.h  expm1f.cpp  fabs.cpp  fabsf.cpp  fabsl.cpp  fdim.cpp  fdimf.cpp  fdiml.cpp  floor.cpp  floorf.cpp  floorl.cpp  fma.cpp  fmaf.cpp  fmax.cpp  fmaxf.cpp  fmaxl.cpp  fmin.cpp  fminf.cpp  fminl.cpp  fmod.cpp  (+76 more)
c/dlmalloc/: BUILD.bazel  LICENSE  malloc.c
c/jsmath/: BUILD.bazel  math.c
c/mimalloc/: BUILD.bazel  impl.c
c/mimalloc/src/: options.c  os.c
c/posix/: BUILD.bazel
c/posix/__custom/: alarm.c  fcntl.c  getpagesize.c  getpwnam.c  getpwuid.c  getrusage.c  localtime.c  pthread.c  pthread_sigmask.c  realpath.c  statvfs.c  strftime.c  time.c
c/posix/dirent/: closedir.cpp  dirfd.cpp  opendir.cpp  readdir.cpp
c/posix/dl/: dl.c
c/posix/signal/: signal.h
c/posix/spawn/: spawn.c
c/posix/unistd/: getopt.cpp  swab.cpp
c/sbrk/: BUILD.bazel  unistd.h
c/std/: BUILD.bazel
c/std/__runtime/: ashlti3.c  int_lib.h  int_types.h  lshrti3.c  multi3.c
c/std/__support/: UInt.h  arg_list.h  blockstore.h  builtin_wrappers.h  c_string.h  char_vector.h  common.h  detailed_powers_of_ten.h  error_or.h  fixedvector.h  float_to_string.h  high_precision_decimal.h  integer_operations.h  integer_to_string.h  integer_utils.h  libc_assert.h  str_to_float.h  str_to_integer.h  wctype_utils.h
c/std/assert/: __assert_fail.cpp  assert.h
c/std/ctype/: isalnum.cpp  isalpha.cpp  isascii.cpp  isblank.cpp  iscntrl.cpp  isdigit.cpp  isgraph.cpp  islower.cpp  isprint.cpp  ispunct.cpp  isspace.cpp  isupper.cpp  isxdigit.cpp  toascii.cpp  tolower.cpp  toupper.cpp
c/std/errno/: libc_errno.cpp  libc_errno.h
c/std/inttypes/: imaxabs.cpp  imaxdiv.cpp  strtoimax.cpp  strtoumax.cpp
c/std/stdio/: clearerr.cpp  clearerr_unlocked.cpp  fclose.cpp  feof.cpp  feof_unlocked.cpp  ferror.cpp  ferror_unlocked.cpp  fflush.cpp  fgetc.cpp  fgetc_unlocked.cpp  fgets.cpp  flockfile.cpp  fopen.cpp  fopencookie.cpp  fprintf.cpp  fputc.cpp  fputs.cpp  fread.cpp  fread_unlocked.cpp  fscanf.cpp  fseek.cpp  ftell.cpp  funlockfile.cpp  fwrite.cpp  fwrite_unlocked.cpp  getc.cpp  getc_unlocked.cpp  getchar.cpp  getchar_unlocked.cpp  printf.cpp  putc.cpp  putchar.cpp  puts.cpp  scanf.cpp  setbuf.cpp  setvbuf.cpp  snprintf.cpp  sprintf.cpp  sscanf.cpp  stderr.cpp  (+5 more)
c/std/stdlib/: _Exit.cpp  abs.cpp  atexit.cpp  atof.cpp  atoi.cpp  atol.cpp  atoll.cpp  bsearch.cpp  div.cpp  exit.cpp  getenv.cpp  labs.cpp  ldiv.cpp  llabs.cpp  lldiv.cpp  qsort.cpp  qsort_r.cpp  qsort_util.h  rand.cpp  rand_util.cpp  rand_util.h  srand.cpp  strtod.cpp  strtof.cpp  strtol.cpp  strtold.cpp  strtoll.cpp  strtoul.cpp  strtoull.cpp
c/std/string/: allocating_string_utils.h  bcmp.cpp  bcopy.cpp  bzero.cpp  index.cpp  memccpy.cpp  memchr.cpp  memcmp.cpp  memcpy.cpp  memmem.cpp  memmove.cpp  mempcpy.cpp  memrchr.cpp  memset.cpp  rindex.cpp  stpcpy.cpp  stpncpy.cpp  strcasecmp.cpp  strcasestr.cpp  strcat.cpp  strchr.cpp  strchrnul.cpp  strcmp.cpp  strcoll.cpp  strcpy.cpp  strcspn.cpp  strdup.cpp  strerror.cpp  strerror_r.cpp  string_utils.h  strlcat.cpp  strlcpy.cpp  strlen.cpp  strncasecmp.cpp  strncat.cpp  strncmp.cpp  strncpy.cpp  strndup.cpp  strnlen.cpp  strpbrk.cpp  (+8 more)
c/std/wchar/: btowc.cpp  wctob.cpp
src/: BUILD.bazel  wasm.h
src/c/: BUILD.bazel  abort.c  ctype.c  exit.c  posix.c  qsort.cpp  time.c
src/c++/: BUILD.bazel  abi.cpp  chrono.cpp  error.cpp  exception.cpp  iostream.cpp  locale.cpp  memory.cpp  mutex.cpp  new.cpp  terminate.cpp
src/c/__custom/: alarm.c  errno.c  fcntl.c  getpagesize.c  getpwnam.c  getpwuid.c  getrusage.c  localtime.c  panic.h  pthread.c  pthread_sigmask.c  realpath.c  statvfs.c  strftime.c  time.c
src/c/__support/: UInt.h  arg_list.h  blockstore.h  builtin_wrappers.h  c_string.h  char_vector.h  common.h  detailed_powers_of_ten.h  error_or.h  fixedvector.h  float_to_string.h  high_precision_decimal.h  integer_operations.h  integer_to_string.h  integer_utils.h  libc_assert.h  str_to_float.h  str_to_integer.h  wctype_utils.h
src/c/assert/: __assert_fail.cpp  assert.h
src/c/ctype/: isalnum.cpp  isalpha.cpp  isascii.cpp  isblank.cpp  iscntrl.cpp  isdigit.cpp  isgraph.cpp  islower.cpp  isprint.cpp  ispunct.cpp  isspace.cpp  isupper.cpp  isxdigit.cpp  toascii.cpp  tolower.cpp  toupper.cpp
src/c/dirent/: closedir.cpp  dirfd.cpp  opendir.cpp  readdir.cpp
src/c/errno/: libc_errno.cpp  libc_errno.h
src/c/int/: ashlti3.c  int_endianness.h  int_lib.h  lshrti3.c  multi3.c
src/c/inttypes/: imaxabs.cpp  imaxdiv.cpp  strtoimax.cpp  strtoumax.cpp
src/c/mem/: memchr.c  wmemchr.c
src/c/stdio/: clearerr.cpp  clearerr_unlocked.cpp  fclose.cpp  feof.cpp  feof_unlocked.cpp  ferror.cpp  ferror_unlocked.cpp  fflush.cpp  fgetc.cpp  fgetc_unlocked.cpp  fgets.cpp  flockfile.cpp  fopen.cpp  fopencookie.cpp  fprintf.cpp  fputc.cpp  fputs.cpp  fread.cpp  fread_unlocked.cpp  fscanf.cpp  fseek.cpp  ftell.cpp  funlockfile.cpp  fwrite.cpp  fwrite_unlocked.cpp  getc.cpp  getc_unlocked.cpp  getchar.cpp  getchar_unlocked.cpp  printf.cpp  putc.cpp  putchar.cpp  puts.cpp  scanf.cpp  setbuf.cpp  setvbuf.cpp  snprintf.cpp  sprintf.cpp  sscanf.cpp  stderr.cpp  (+7 more)
src/c/stdlib/: _Exit.cpp  abs.cpp  atexit.cpp  atof.cpp  atoi.cpp  atol.cpp  atoll.cpp  bsearch.cpp  div.cpp  exit.cpp  getenv.cpp  labs.cpp  ldiv.cpp  llabs.cpp  lldiv.cpp  qsort.cpp  (+13 more)
src/dl/: BUILD.bazel  dl.c
src/dlmalloc/: BUILD.bazel  dlmalloc.c  malloc.c  sbrk.c
src/m/: BUILD.bazel  math.c
src/math/: BUILD.bazel  math.c
src/realtime/: BUILD.bazel
src/rt/: BUILD.bazel  empty.c  spawn.c  wait.c
(+581 files in other folders)
