module(
    name = "wasm_toolchain",
    repo_name = "wasmtoolchain_macos_arm64",
    version = "0.1.0",
)

# https://registry.bazel.build/modules/platforms
bazel_dep(name = "platforms", version = "0.0.8")

# https://registry.bazel.build/modules/llvm-project
bazel_dep(name = "llvm-project", version = "17.0.3")

archive_override(
    module_name = "llvm-project",
    urls = [
        "https://github.com/llvm/llvm-project/releases/download/llvmorg-17.0.3/llvm-project-17.0.3.src.tar.xz",
    ],
    integrity = "sha256-vloeRNZPMGu0T859NuOzmTaU6OYSKyNIYIkGKDwXbbg=",
    strip_prefix = "llvm-project-17.0.3.src",
    patches = [
        "//patches:0001-Add-Bazel-files-to-.gitignore.patch",
        "//patches:0002-Add-LLVM-Bazel-overlay-files.patch",
        "//patches:0003-Add-MODULE.bazel.patch",
        "//patches:0004-Add-BUILD.bazel.patch",
        # "//patches:0005-Add-Bazel-LLVM-targets.patch",
        "//patches:0006-Add-LLVM-version-vars.patch",
        "//patches:0007-Guard-against-empty-workspace-root.patch",
        "//patches:0008-Correct-builtin-headers-prefix.patch",
        "//patches:0009-Fix-an-operator-overload-for-GCC-8.3.patch",
        "//patches:0010-Use-TEST_TMPDIR-on-Unix-when-it-is-set.patch",
        "//patches:0011-Use-Windows-assembly-files-for-BLAKE3-on-Windows.patch",
        "//patches:0012-Add-scope-resolution-operators-for-MSVC-2019.patch",
        "//patches:0013-Disable-zlib-zstd-mpfr-and-pfm.patch",

        # This is a copy of 0005-Add-Bazel-LLVM-targets.patch, but with all non-WebAssembly targets
        # commented out. This shrinks the size of the compiled clang binary from ~153MB to ~79MB.
        "//patches:1001-Add-Bazel-LLVM-targets.patch",
        # This removes the definition of the LLVM native target, since we are not including it in
        # the list of built targets.
        "//patches:1002-Replace-LLVM-native-target.patch",
    ],
    patch_strip = 1,
)
