load("//:wasm_rules.bzl", "wasm_cc_library")

wasm_cc_library(
    name = "c++",
    srcs = [
        "abi.cpp",
        "algorithm.cpp",
        "chrono.cpp",
        "condition_variable.cpp",
        "error.cpp",
        "exception.cpp",
        "future.cpp",
        "hash.cpp",
        "ios.cpp",
        "ios.instantiations.cpp",
        "iostream.cpp",
        "iostream_init.h",
        "locale.cpp",
        "memory.cpp",
        "mutex.cpp",
        "new.cpp",
        "new_handler.cpp",
        "std_stream.h",
        "string.cpp",
        "terminate.cpp",
        "thread.cpp",
    ],
    local_defines = [
        "_LIBCPP_NO_EXCEPTIONS",
        "_LIBCPP_HAS_NO_EXCEPTIONS",
    ],
    visibility = [
        "//visibility:public",
    ],
    deps = [
        "//c:wasm",
    ],
)
