cc_library(
    name = "wasm",
    hdrs = [
        "wasm.h",
    ],
    visibility = [
        "//visibility:public",
    ],
)

filegroup(
    name = "libs",
    srcs = [
        "//src/c",
        "//src/c++",
        "//src/dl",
        "//src/dlmalloc",
        "//src/m",
        "//src/rt",
    ],
)
