load("//:wasm_cc.bzl", "wasm_cc_library")

wasm_cc_library(
    name = "dlmalloc",
    srcs = [
        "dlmalloc.c",
    ],
    defines = [
        "PAGESIZE=65536",
    ],
    textual_hdrs = [
        "malloc.c",
    ],
    visibility = [
        "//visibility:public",
    ],
    deps = [
        "//c:wasm",
        "//c/sbrk",
    ],
)
