load("//:wasm_cc.bzl", "wasm_cc_library")

wasm_cc_library(
    name = "posix",
    srcs = glob([
        "**/*.h",
        "**/*.c",
        "**/*.cpp",
    ]),
    copts = [
        "-Wno-c2x-extensions", # allow omitting the parameter name in a function definition
    ],
    visibility = [
        "//c:__subpackages__",
    ],
    deps = [
        "//c:wasm",
        "//c/std:__support",
        "//c/std:stdio",
        "//c/std:string",
    ],
)
