load("//:wasm_rules.bzl", "wasm_cc_library")

wasm_cc_library(
    name = "__support",
    srcs = glob([
        "__support/**/*.c",
        "__support/**/*.cpp",
        "__support/**/*.h",
        "assert/**/*.cpp",
        "assert/**/*.h",
        "errno/**/*.c",
        "errno/**/*.cpp",
        "errno/**/*.h",
        # TODO: These should really be in a separate library, but they don't seem to fit anywhere
        # very well.
        "inttypes/**/*.c",
        "inttypes/**/*.cpp",
        "inttypes/**/*.h",
    ]) + [
        "stdlib/abort.h",
    ],
    hdrs = glob([
        "__support/**/*.h",
    ]),
    visibility = [
        "//c:__subpackages__",
    ],
    deps = [
        "//c:wasm",
    ],
)

wasm_cc_library(
    name = "string",
    srcs = glob([
        "ctype/**/*.h",
        "ctype/**/*.c",
        "ctype/**/*.cpp",
        "string/**/*.h",
        "string/**/*.c",
        "string/**/*.cpp",
        "wchar/**/*.h",
        "wchar/**/*.c",
        "wchar/**/*.cpp",
    ]),
    visibility = [
        "//visibility:public",
    ],
    deps = [
        ":__support",
        "//c:wasm",
    ],
)

wasm_cc_library(
    name = "stdlib",
    srcs = glob([
        "stdlib/**/*.h",
        "stdlib/**/*.c",
        "stdlib/**/*.cpp",
    ]),
    visibility = [
        "//visibility:public",
    ],
    deps = [
        ":__support",
        "//c:wasm",
    ],
)

wasm_cc_library(
    name = "stdio",
    srcs = glob(
        [
            "stdio/**/*.h",
            "stdio/**/*.c",
            "stdio/**/*.cpp",
            "sprintf/**/*.c",
        ],
        exclude = [
            "stdio/fopencookie.cpp",
            "stdio/printf_core/**",
            "stdio/scanf_core/**",
        ],
    ),
    visibility = [
        "//visibility:public",
    ],
    deps = [
        ":__support",
        ":string",
        "//c:wasm",
    ],
)

wasm_cc_library(
    name = "runtime",
    srcs = glob([
        "__runtime/**/*.h",
        "__runtime/**/*.c",
        "__runtime/**/*.cpp",
    ]),
    visibility = [
        "//visibility:public",
    ],
    deps = [
        ":__support",
        "//c:wasm",
    ],
)

wasm_cc_library(
    name = "time",
    srcs = glob([
        "time/**/*.h",
        "time/**/*.c",
        "time/**/*.cpp",
    ]),
    visibility = [
        "//visibility:public",
    ],
    deps = [
        ":__support",
        "//c:wasm",
    ],
)
