cc_library(
    name = "c++",
    srcs = [
        "abi.cpp",
        "algorithm.cpp",
        "chrono.cpp",
        "condition_variable.cpp",
        "error.cpp",
        "exception.cpp",
        "future.cpp",
        "hash.cpp",
        "ios.cpp",
        "ios.instantiations.cpp",
        "iostream.cpp",
        "iostream_init.h",
        "locale.cpp",
        "memory.cpp",
        "mutex.cpp",
        "new.cpp",
        "std_stream.h",
        "string.cpp",
        "terminate.cpp",
        "thread.cpp",
    ],
    defines = [
        "_LIBCPP_NO_EXCEPTIONS",
        "_LIBCPP_HAS_NO_EXCEPTIONS",
    ],
    visibility = [
        "//visibility:public",
    ],
    deps = [
        "//src:wasm",
    ],
)
