cc_library(
    name = "c",
    srcs = glob(
        [
            "**/*.h",
            "**/*.c",
            "**/*.cpp",
        ],
        exclude = [
            "stdio/fopencookie.cpp",
            "stdio/printf_core/**",
            "stdio/scanf_core/**",
            "math/**",
        ],
    ),
    copts = [
        "-fno-builtin",
    ],
    defines = [
        "_LIBCPP_NO_EXCEPTIONS",
        "_LIBCPP_HAS_NO_EXCEPTIONS",
    ],
    visibility = [
        "//visibility:public",
    ],
    deps = [
        "//src:wasm",
    ],
)
