cc_library(
    name = "dlmalloc",
    srcs = [
        "dlmalloc.c",
        "sbrk.c",
        "unistd.h",
    ],
    defines = [
        "PAGESIZE=65536",
    ],
    textual_hdrs = [
        "malloc.c",
    ],
    visibility = [
        "//visibility:public",
    ],
    deps = [
        "//src:wasm",
    ],
)
